client/src/styles/main.css
/* ... */
    .wine-form .normal-form-container .form-buttons {
      margin-bottom: 2rem; }
      .wine-form .normal-form-container .form-buttons input[type="submit"] {
        margin-right: 1rem; }

label {
  display: block;
  font-weight: 700; }

.wine-info {
  height: 100vh;
  width: 100vw;
  background-color: #F3F2F3;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 0;
  grid-template-areas: "breadcrumbs content" "img content"; }
  .wine-info .breadcrumbs {
    grid-area: breadcrumbs;
    padding-top: 1rem;
    padding-left: 2rem;
    position: absolute;
    z-index: 2; }
  .wine-info .wine-heading-img-container {
    grid-area: img;
    height: 100vh;
    margin-top: -3.5rem;
    display: flex;
    justify-items: stretch;
    flex-direction: column; }
    .wine-info .wine-heading-img-container .wine-img {
      height: 100%;
      display: flex;
      justify-content: center;
      align-content: center; }
      .wine-info .wine-heading-img-container .wine-img .img {
        max-width: 70%;
        align-self: center;
        justify-self: center; }
  .wine-info .wine-content-container {
    grid-area: content;
    overflow: auto; }
    .wine-info .wine-content-container .wine-content {
      background-color: #fff;
      padding-left: 2rem;
      border-radius: 1rem;
      margin: 2rem 2rem 2rem 0; }
      .wine-info .wine-content-container .wine-content .wine-heading {
        margin-bottom: 2rem; }
        .wine-info .wine-content-container .wine-content .wine-heading h1 {
          line-height: 1;
          padding-top: 1rem;
          margin-right: 1rem;
          margin-bottom: 0; }
        .wine-info .wine-content-container .wine-content .wine-heading .edit-wine-button {
          padding: 0;
          border: 0;
          margin-bottom: 2px;
          background-color: #fff;
          min-width: 73px; }
          .wine-info .wine-content-container .wine-content .wine-heading .edit-wine-button:hover {
            box-shadow: none;
            text-decoration: underline; }
      .wine-info .wine-content-container .wine-content .description-row {
        margin-bottom: 1.5rem; }
        .wine-info .wine-content-container .wine-content .description-row .description-label {
          color: #7B737D;
          font-weight: 700; }
      .wine-info .wine-content-container .wine-content .delete {
        margin-bottom: 2rem; }

@media (max-width: 568px) {
  .wine-info {
    grid-template-areas: "breadcrumbs" "img" "content";
    grid-template-columns: repeat(1, 1fr); }
    .wine-info .breadcrumbs {
      position: fixed; }
      .wine-info .breadcrumbs a {
        background-color: #fff;
        padding: .34375rem .5rem;
        border-radius: 50%; }
        .wine-info .breadcrumbs a .back-text {
          display: none; }
    .wine-info .wine-heading-img-container {
      margin-top: 0;
      height: 100%; }
      .wine-info .wine-heading-img-container .wine-img .img {
        max-width: 100%;
        height: 100%; }
    .wine-info .wine-content-container {
      overflow: visible;
      position: relative;
      background-color: #fff; }
      .wine-info .wine-content-container .wine-content {
        margin: 0; }
        .wine-info .wine-content-container .wine-content .wine-heading {
          text-align: center; } }

.wine-feed section {
  padding: 0; }

.wine-feed section:last-child {
  margin-bottom: 3rem; }

.wine-card-group {
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start; }

@media (max-width: 960px) {
  .wine-card-group {
    flex-wrap: nowrap;
    overflow-x: scroll;
    overflow-y: visible;
    padding-bottom: 1rem; } }

@media (max-width: 700px) {
  .wine-feed section h2 {
    margin-top: 0; }
  .wine-feed section .wine-card-group a:last-child {
    margin-right: 1rem; } }

a.wine-card {
  display: grid;
  grid-template-areas: "card-image card-info";
  border: 1px solid #ddd;
  border-radius: 5px;
  color: #2B202F;
  background-color: #fff;
  height: 150px;
  width: 330px;
  margin: 1em 0 0 1em;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2); }
  a.wine-card:hover {
    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.3);
    transition: all .1s ease-in-out;
    text-decoration: none; }
  a.wine-card .card-image {
    grid-area: card-image;
    background-color: #ddd;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 150px;
    width: 150px; }
  a.wine-card .card-info {
    grid-area: card-info;
    width: 150px;
    padding: 15px; }
    a.wine-card .card-info h3 {
      font-size: 1em;
      margin: 0; }
    a.wine-card .card-info span {
      font-size: 0.875em; }

@media (max-width: 700px) {
  a.wine-card {
    height: 248px;
    width: 150px;
    grid-template-areas: "card-image"  "card-info";
    align-content: flex-start; }
    a.wine-card .card-info {
      width: 130px;
      padding: 10px; } }

.auth-form {
  margin: 1rem 0;
  display: flex;
  flex-direction: column;
  align-items: stretch; }
  .auth-form .auth-form-row {
    flex: 1 1 auto;
    display: flex;
    justify-content: flex-start; }
    .auth-form .auth-form-row input[type="text"],
    .auth-form .auth-form-row input[type="email"],
    .auth-form .auth-form-row input[type="password"],
    .auth-form .auth-form-row button[type="submit"],
    .auth-form .auth-form-row input[type="submit"] {
      padding: 1rem;
      flex: 0 1 500px; }
    .auth-form .auth-form-row button, .auth-form .auth-form-row input[type="submit"] {
      box-sizing: content-box; }

.white-overlay {
  content: “ ”; }
  @media (max-width: 900px) {
    .white-overlay {
      position: absolute;
      top: 0;
      left: 0;
      height: 100vh;
      width: 100vw;
      background: inherit;
      box-shadow: inset 0 0 0 2000px rgba(255, 255, 255, 0.8);
      filter: blur(3px); } }

.grid-container {
  height: 100vh;
  display: flex;
  background-color: #F3F2F3; }
  .grid-container header {
    flex: 0 0 180px; }
/* ... */

